[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/tileset/nature.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/Characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Items/Potion.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Room2.gd" type="Script" id=5]
[ext_resource path="res://assets/background/sky.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Noto_Sans_JP/NotoSansJP-Bold.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/music/bensound-straight.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1396.97, 47.6664 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 513.83, 63.8637 )

[node name="Room 2" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -393148, 0, 0, -393147, 0, 1, -393146, 0, 1, -393145, 0, 2, -327612, 0, 65536, -327611, 0, 65537, -327610, 0, 65537, -327609, 0, 65538, -262076, 0, 65536, -262075, 0, 65537, -262074, 0, 65537, -262073, 0, 65538, -196540, 0, 65536, -196539, 0, 65537, -196538, 0, 65537, -196537, 0, 65538, -131004, 0, 65536, -131003, 0, 65537, -131002, 0, 65537, -131001, 0, 65538, -65468, 0, 65536, -65467, 0, 65537, -65466, 0, 65537, -65465, 0, 65538, 2, 0, 0, 3, 0, 2, 68, 0, 65536, 69, 0, 65537, 70, 0, 65537, 71, 0, 65538, 65538, 0, 65536, 65539, 0, 65538, 65553, 0, 0, 65554, 0, 1, 65555, 0, 1, 65556, 0, 1, 65557, 0, 1, 65558, 0, 1, 65559, 0, 1, 65560, 0, 1, 65561, 0, 1, 65562, 0, 1, 65563, 0, 1, 65564, 0, 1, 65565, 0, 1, 65566, 0, 1, 65567, 0, 1, 65568, 0, 1, 65569, 0, 1, 65570, 0, 1, 65571, 0, 1, 65572, 0, 1, 65573, 0, 1, 65574, 0, 1, 65575, 0, 1, 65576, 0, 1, 65577, 0, 2, 65604, 0, 65536, 65605, 0, 65537, 65606, 0, 65537, 65607, 0, 65538, 131074, 0, 65536, 131075, 0, 65538, 131089, 0, 65536, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65537, 131098, 0, 65537, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65537, 131108, 0, 65537, 131109, 0, 65537, 131110, 0, 65537, 131111, 0, 65537, 131112, 0, 65537, 131113, 0, 65538, 131140, 0, 65536, 131141, 0, 65537, 131142, 0, 65537, 131143, 0, 65538, 196610, 0, 65536, 196611, 0, 65538, 196625, 0, 131072, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65537, 196629, 0, 65537, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65537, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65537, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65537, 196643, 0, 65537, 196644, 0, 65537, 196645, 0, 65537, 196646, 0, 65537, 196647, 0, 65537, 196648, 0, 65537, 196649, 0, 65538, 196676, 0, 65536, 196677, 0, 65537, 196678, 0, 65537, 196679, 0, 65538, 262146, 0, 65536, 262147, 0, 65538, 262162, 0, 131072, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65537, 262180, 0, 65537, 262181, 0, 65537, 262182, 0, 65537, 262183, 0, 65537, 262184, 0, 65537, 262185, 0, 65538, 262212, 0, 65536, 262213, 0, 65537, 262214, 0, 65537, 262215, 0, 65538, 327682, 0, 65536, 327683, 0, 65537, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 2, 327699, 0, 65536, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 65537, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65537, 327716, 0, 65537, 327717, 0, 65537, 327718, 0, 65537, 327719, 0, 65537, 327720, 0, 65537, 327721, 0, 65538, 327748, 0, 65536, 327749, 0, 65537, 327750, 0, 65537, 327751, 0, 65538, 393218, 0, 65536, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65538, 393235, 0, 65536, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65537, 393248, 0, 65537, 393249, 0, 65537, 393250, 0, 65537, 393251, 0, 65537, 393252, 0, 65537, 393253, 0, 65537, 393254, 0, 65537, 393255, 0, 65537, 393256, 0, 65537, 393257, 0, 65538, 393267, 1, 0, 393268, 1, 2, 393284, 0, 65536, 393285, 0, 65537, 393286, 0, 65537, 393287, 0, 65538, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65538, 458771, 0, 65536, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65537, 458782, 0, 65537, 458783, 0, 65537, 458784, 0, 65537, 458785, 0, 65537, 458786, 0, 65537, 458787, 0, 65537, 458788, 0, 131073, 458789, 0, 131073, 458790, 0, 131073, 458791, 0, 131073, 458792, 0, 131073, 458793, 0, 131074, 458820, 0, 65536, 458821, 0, 65537, 458822, 0, 65537, 458823, 0, 65538, 524290, 0, 65536, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65538, 524307, 0, 65536, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65537, 524319, 0, 65537, 524320, 0, 65537, 524321, 0, 65537, 524322, 0, 65537, 524323, 0, 131074, 524356, 0, 65536, 524357, 0, 65537, 524358, 0, 65537, 524359, 0, 65538, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 131073, 589831, 0, 131073, 589832, 0, 131073, 589833, 0, 131073, 589834, 0, 131074, 589843, 0, 131072, 589844, 0, 131073, 589845, 0, 131073, 589846, 0, 131073, 589847, 0, 131073, 589848, 0, 131073, 589849, 0, 131073, 589850, 0, 131073, 589851, 0, 131073, 589852, 0, 131073, 589853, 0, 131073, 589854, 0, 131073, 589855, 0, 131073, 589856, 0, 131073, 589857, 0, 131073, 589858, 0, 131074, 589892, 0, 65536, 589893, 0, 65537, 589894, 0, 65537, 589895, 0, 65538, 655362, 0, 65536, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65538, 655428, 0, 65536, 655429, 0, 65537, 655430, 0, 65537, 655431, 0, 65537, 655432, 0, 2, 720898, 0, 65536, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65538, 720956, 0, 0, 720957, 0, 1, 720958, 0, 1, 720959, 0, 2, 720964, 0, 65536, 720965, 0, 65537, 720966, 0, 65537, 720967, 0, 65537, 720968, 0, 65537, 720969, 0, 2, 786432, 0, 0, 786433, 0, 1, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65538, 786492, 0, 131072, 786493, 0, 131073, 786494, 0, 131073, 786495, 0, 131074, 786500, 0, 65536, 786501, 0, 65537, 786502, 0, 65537, 786503, 0, 65537, 786504, 0, 65537, 786505, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 131074, 852036, 0, 65536, 852037, 0, 65537, 852038, 0, 65537, 852039, 0, 65537, 852040, 0, 65537, 852041, 0, 131074, 917504, 0, 65536, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65538, 917520, 0, 0, 917521, 0, 1, 917522, 0, 1, 917523, 0, 1, 917524, 0, 1, 917525, 0, 1, 917526, 0, 1, 917527, 0, 1, 917528, 0, 1, 917529, 0, 1, 917530, 0, 1, 917531, 0, 1, 917532, 0, 1, 917533, 0, 1, 917534, 0, 1, 917535, 0, 1, 917536, 0, 1, 917537, 0, 1, 917538, 0, 1, 917539, 0, 1, 917540, 0, 2, 917546, 0, 0, 917547, 0, 1, 917548, 0, 1, 917549, 0, 1, 917550, 0, 1, 917551, 0, 1, 917552, 0, 1, 917553, 0, 1, 917554, 0, 2, 917572, 0, 65536, 917573, 0, 65537, 917574, 0, 65537, 917575, 0, 65537, 917576, 0, 65538, 983040, 0, 65536, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65538, 983056, 0, 131072, 983057, 0, 131073, 983058, 0, 131073, 983059, 0, 131073, 983060, 0, 131073, 983061, 0, 131073, 983062, 0, 131073, 983063, 0, 131073, 983064, 0, 131073, 983065, 0, 131073, 983066, 0, 131073, 983067, 0, 131073, 983068, 0, 131073, 983069, 0, 131073, 983070, 0, 131073, 983071, 0, 131073, 983072, 0, 131073, 983073, 0, 131073, 983074, 0, 131073, 983075, 0, 131073, 983076, 0, 131074, 983082, 0, 131072, 983083, 0, 131073, 983084, 0, 131073, 983085, 0, 131073, 983086, 0, 131073, 983087, 0, 131073, 983088, 0, 131073, 983089, 0, 131073, 983090, 0, 131074, 983105, 0, 0, 983106, 0, 1, 983107, 0, 1, 983108, 0, 65537, 983109, 0, 65537, 983110, 0, 65537, 983111, 0, 65537, 983112, 0, 65538, 1048576, 0, 65536, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 1, 1048582, 0, 1, 1048583, 0, 1, 1048584, 0, 1, 1048585, 0, 1, 1048586, 0, 1, 1048587, 0, 2, 1048641, 0, 131072, 1048642, 0, 131073, 1048643, 0, 131073, 1048644, 0, 65537, 1048645, 0, 65537, 1048646, 0, 65537, 1048647, 0, 65537, 1048648, 0, 65538, 1114112, 0, 65536, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 131073, 1114117, 0, 131073, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 131073, 1114121, 0, 131073, 1114122, 0, 65537, 1114123, 0, 65538, 1114180, 0, 65536, 1114181, 0, 65537, 1114182, 0, 65537, 1114183, 0, 65537, 1114184, 0, 65538, 1179648, 0, 65536, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65538, 1179654, 0, 65536, 1179655, 0, 65538, 1179658, 0, 65536, 1179659, 0, 65538, 1179708, 0, 0, 1179709, 0, 2, 1179716, 0, 65536, 1179717, 0, 65537, 1179718, 0, 65537, 1179719, 0, 65537, 1179720, 0, 65538, 1245184, 0, 65536, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65538, 1245190, 0, 65536, 1245191, 0, 65538, 1245194, 0, 65536, 1245195, 0, 65537, 1245196, 0, 1, 1245197, 0, 1, 1245198, 0, 1, 1245199, 0, 1, 1245200, 0, 1, 1245201, 0, 1, 1245202, 0, 1, 1245203, 0, 1, 1245204, 0, 1, 1245205, 0, 1, 1245206, 0, 1, 1245207, 0, 1, 1245208, 0, 1, 1245209, 0, 1, 1245210, 0, 1, 1245211, 0, 1, 1245212, 0, 1, 1245213, 0, 1, 1245214, 0, 1, 1245215, 0, 1, 1245216, 0, 1, 1245217, 0, 1, 1245218, 0, 1, 1245219, 0, 1, 1245220, 0, 1, 1245221, 0, 1, 1245222, 0, 1, 1245223, 0, 1, 1245224, 0, 1, 1245225, 0, 1, 1245226, 0, 1, 1245227, 0, 1, 1245228, 0, 1, 1245229, 0, 1, 1245230, 0, 1, 1245231, 0, 1, 1245232, 0, 1, 1245233, 0, 1, 1245234, 0, 2, 1245244, 0, 65536, 1245245, 0, 65538, 1245252, 0, 65536, 1245253, 0, 65537, 1245254, 0, 65537, 1245255, 0, 65537, 1245256, 0, 65538, 1310720, 0, 65536, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65538, 1310726, 0, 65536, 1310727, 0, 65538, 1310730, 0, 131072, 1310731, 0, 65537, 1310732, 0, 65537, 1310733, 0, 65537, 1310734, 0, 65537, 1310735, 0, 65537, 1310736, 0, 65537, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 0, 65537, 1310743, 0, 65537, 1310744, 0, 65537, 1310745, 0, 65537, 1310746, 0, 65537, 1310747, 0, 65537, 1310748, 0, 65537, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65537, 1310756, 0, 65537, 1310757, 0, 65537, 1310758, 0, 65537, 1310759, 0, 65537, 1310760, 0, 65537, 1310761, 0, 65537, 1310762, 0, 65537, 1310763, 0, 65537, 1310764, 0, 65537, 1310765, 0, 65537, 1310766, 0, 65537, 1310767, 0, 65537, 1310768, 0, 65537, 1310769, 0, 65537, 1310770, 0, 65537, 1310771, 0, 1, 1310772, 0, 1, 1310773, 0, 1, 1310774, 0, 1, 1310775, 0, 1, 1310776, 0, 1, 1310777, 0, 1, 1310778, 0, 1, 1310779, 0, 1, 1310780, 0, 65537, 1310781, 0, 65537, 1310782, 0, 1, 1310783, 0, 1, 1310784, 0, 2, 1310788, 0, 65536, 1310789, 0, 65537, 1310790, 0, 65537, 1310791, 0, 65537, 1310792, 0, 65538, 1376256, 0, 131072, 1376257, 0, 131073, 1376258, 0, 131073, 1376259, 0, 131074, 1376262, 0, 131072, 1376263, 0, 131074, 1376267, 0, 131072, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65537, 1376292, 0, 65537, 1376293, 0, 65537, 1376294, 0, 65537, 1376295, 0, 65537, 1376296, 0, 65537, 1376297, 0, 65537, 1376298, 0, 65537, 1376299, 0, 65537, 1376300, 0, 65537, 1376301, 0, 65537, 1376302, 0, 65537, 1376303, 0, 65537, 1376304, 0, 65537, 1376305, 0, 65537, 1376306, 0, 65537, 1376307, 0, 65537, 1376308, 0, 65537, 1376309, 0, 65537, 1376310, 0, 65537, 1376311, 0, 65537, 1376312, 0, 65537, 1376313, 0, 65537, 1376314, 0, 65537, 1376315, 0, 65537, 1376316, 0, 65537, 1376317, 0, 65537, 1376318, 0, 65537, 1376319, 0, 65537, 1376320, 0, 65538, 1376324, 0, 131072, 1376325, 0, 131073, 1376326, 0, 131073, 1376327, 0, 131073, 1376328, 0, 131074, 1441804, 0, 65536, 1441805, 0, 65537, 1441806, 0, 65537, 1441807, 0, 65537, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 0, 65537, 1441811, 0, 65537, 1441812, 0, 65537, 1441813, 0, 65537, 1441814, 0, 65537, 1441815, 0, 65537, 1441816, 0, 65537, 1441817, 0, 65537, 1441818, 0, 65537, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65537, 1441826, 0, 65537, 1441827, 0, 65537, 1441828, 0, 65537, 1441829, 0, 65537, 1441830, 0, 65537, 1441831, 0, 65537, 1441832, 0, 65537, 1441833, 0, 65537, 1441834, 0, 65537, 1441835, 0, 65537, 1441836, 0, 65537, 1441837, 0, 65537, 1441838, 0, 65537, 1441839, 0, 65537, 1441840, 0, 65537, 1441841, 0, 65537, 1441842, 0, 65537, 1441843, 0, 65537, 1441844, 0, 65537, 1441845, 0, 65537, 1441846, 0, 65537, 1441847, 0, 65537, 1441848, 0, 65537, 1441849, 0, 65537, 1441850, 0, 65537, 1441851, 0, 65537, 1441852, 0, 65537, 1441853, 0, 65537, 1441854, 0, 65537, 1441855, 0, 65537, 1441856, 0, 65538, 1507340, 0, 65536, 1507341, 0, 65537, 1507342, 0, 65537, 1507343, 0, 65537, 1507344, 0, 65537, 1507345, 0, 65537, 1507346, 0, 65537, 1507347, 0, 65537, 1507348, 0, 65537, 1507349, 0, 65537, 1507350, 0, 65537, 1507351, 0, 65537, 1507352, 0, 65537, 1507353, 0, 65537, 1507354, 0, 65537, 1507355, 0, 65537, 1507356, 0, 65537, 1507357, 0, 65537, 1507358, 0, 65537, 1507359, 0, 65537, 1507360, 0, 65537, 1507361, 0, 65537, 1507362, 0, 65537, 1507363, 0, 65537, 1507364, 0, 65537, 1507365, 0, 65537, 1507366, 0, 65537, 1507367, 0, 65537, 1507368, 0, 65537, 1507369, 0, 65537, 1507370, 0, 65537, 1507371, 0, 65537, 1507372, 0, 65537, 1507373, 0, 65537, 1507374, 0, 65537, 1507375, 0, 65537, 1507376, 0, 65537, 1507377, 0, 65537, 1507378, 0, 65537, 1507379, 0, 65537, 1507380, 0, 65537, 1507381, 0, 65537, 1507382, 0, 65537, 1507383, 0, 65537, 1507384, 0, 65537, 1507385, 0, 65537, 1507386, 0, 65537, 1507387, 0, 65537, 1507388, 0, 65537, 1507389, 0, 65537, 1507390, 0, 65537, 1507391, 0, 65537, 1507392, 0, 131074, 1572876, 0, 65536, 1572877, 0, 65537, 1572878, 0, 65537, 1572879, 0, 65537, 1572880, 0, 65537, 1572881, 0, 65537, 1572882, 0, 65537, 1572883, 0, 65537, 1572884, 0, 65537, 1572885, 0, 65537, 1572886, 0, 65537, 1572887, 0, 65537, 1572888, 0, 65537, 1572889, 0, 65537, 1572890, 0, 65537, 1572891, 0, 65537, 1572892, 0, 65537, 1572893, 0, 65537, 1572894, 0, 65537, 1572895, 0, 65537, 1572896, 0, 65537, 1572897, 0, 65537, 1572898, 0, 65537, 1572899, 0, 65537, 1572900, 0, 65537, 1572901, 0, 65537, 1572902, 0, 65537, 1572903, 0, 65537, 1572904, 0, 65537, 1572905, 0, 65537, 1572906, 0, 65537, 1572907, 0, 65537, 1572908, 0, 65537, 1572909, 0, 65537, 1572910, 0, 65537, 1572911, 0, 65537, 1572912, 0, 65537, 1572913, 0, 65537, 1572914, 0, 65537, 1572915, 0, 65537, 1572916, 0, 65537, 1572917, 0, 65537, 1572918, 0, 65537, 1572919, 0, 65537, 1572920, 0, 65537, 1572921, 0, 65537, 1572922, 0, 65537, 1572923, 0, 65537, 1572924, 0, 65537, 1572925, 0, 65537, 1572926, 0, 65537, 1572927, 0, 65538, 1638412, 0, 65536, 1638413, 0, 65537, 1638414, 0, 65537, 1638415, 0, 65537, 1638416, 0, 65537, 1638417, 0, 65537, 1638418, 0, 65537, 1638419, 0, 65537, 1638420, 0, 65537, 1638421, 0, 65537, 1638422, 0, 65537, 1638423, 0, 65537, 1638424, 0, 65537, 1638425, 0, 65537, 1638426, 0, 65537, 1638427, 0, 65537, 1638428, 0, 65537, 1638429, 0, 65537, 1638430, 0, 65537, 1638431, 0, 65537, 1638432, 0, 65537, 1638433, 0, 65537, 1638434, 0, 65537, 1638435, 0, 65537, 1638436, 0, 65537, 1638437, 0, 65537, 1638438, 0, 65537, 1638439, 0, 65537, 1638440, 0, 65537, 1638441, 0, 65537, 1638442, 0, 65537, 1638443, 0, 65537, 1638444, 0, 65537, 1638445, 0, 65537, 1638446, 0, 65537, 1638447, 0, 65537, 1638448, 0, 65537, 1638449, 0, 65537, 1638450, 0, 65537, 1638451, 0, 65537, 1638452, 0, 65537, 1638453, 0, 65537, 1638454, 0, 65537, 1638455, 0, 65537, 1638456, 0, 65537, 1638457, 0, 65537, 1638458, 0, 65537, 1638459, 0, 65537, 1638460, 0, 65537, 1638461, 0, 65537, 1638462, 0, 65537, 1638463, 0, 65538, 1703948, 0, 65536, 1703949, 0, 65537, 1703950, 0, 65537, 1703951, 0, 65537, 1703952, 0, 65537, 1703953, 0, 65537, 1703954, 0, 65537, 1703955, 0, 65537, 1703956, 0, 65537, 1703957, 0, 65537, 1703958, 0, 65537, 1703959, 0, 65537, 1703960, 0, 65537, 1703961, 0, 65537, 1703962, 0, 65537, 1703963, 0, 65537, 1703964, 0, 65537, 1703965, 0, 65537, 1703966, 0, 65537, 1703967, 0, 65537, 1703968, 0, 65537, 1703969, 0, 65537, 1703970, 0, 65537, 1703971, 0, 65537, 1703972, 0, 65537, 1703973, 0, 65537, 1703974, 0, 65537, 1703975, 0, 65537, 1703976, 0, 65537, 1703977, 0, 65537, 1703978, 0, 65537, 1703979, 0, 65537, 1703980, 0, 65537, 1703981, 0, 65537, 1703982, 0, 65537, 1703983, 0, 65537, 1703984, 0, 65537, 1703985, 0, 65537, 1703986, 0, 65537, 1703987, 0, 65537, 1703988, 0, 65537, 1703989, 0, 65537, 1703990, 0, 65537, 1703991, 0, 65537, 1703992, 0, 65537, 1703993, 0, 65537, 1703994, 0, 65537, 1703995, 0, 65537, 1703996, 0, 65537, 1703997, 0, 65537, 1703998, 0, 65537, 1703999, 0, 65537, 1704000, 0, 2, 1769484, 0, 131072, 1769485, 0, 131073, 1769486, 0, 131073, 1769487, 0, 131073, 1769488, 0, 131073, 1769489, 0, 131073, 1769490, 0, 131073, 1769491, 0, 131073, 1769492, 0, 131073, 1769493, 0, 131073, 1769494, 0, 131073, 1769495, 0, 131073, 1769496, 0, 131073, 1769497, 0, 131073, 1769498, 0, 131073, 1769499, 0, 131073, 1769500, 0, 131073, 1769501, 0, 131073, 1769502, 0, 131073, 1769503, 0, 131073, 1769504, 0, 131073, 1769505, 0, 131073, 1769506, 0, 65537, 1769507, 0, 65537, 1769508, 0, 65537, 1769509, 0, 65537, 1769510, 0, 65537, 1769511, 0, 65537, 1769512, 0, 65537, 1769513, 0, 65537, 1769514, 0, 65537, 1769515, 0, 65537, 1769516, 0, 65537, 1769517, 0, 65537, 1769518, 0, 65537, 1769519, 0, 65537, 1769520, 0, 65537, 1769521, 0, 65537, 1769522, 0, 65537, 1769523, 0, 65537, 1769524, 0, 65537, 1769525, 0, 65537, 1769526, 0, 65537, 1769527, 0, 65537, 1769528, 0, 65537, 1769529, 0, 65537, 1769530, 0, 65537, 1769531, 0, 65537, 1769532, 0, 65537, 1769533, 0, 65537, 1769534, 0, 65537, 1769535, 0, 65537, 1769536, 0, 65538, 1835042, 0, 131072, 1835043, 0, 131073, 1835044, 0, 131073, 1835045, 0, 131073, 1835046, 0, 131073, 1835047, 0, 131073, 1835048, 0, 131073, 1835049, 0, 131073, 1835050, 0, 131073, 1835051, 0, 131073, 1835052, 0, 131073, 1835053, 0, 65537, 1835054, 0, 65537, 1835055, 0, 65537, 1835056, 0, 65537, 1835057, 0, 65537, 1835058, 0, 65537, 1835059, 0, 65537, 1835060, 0, 65537, 1835061, 0, 65537, 1835062, 0, 65537, 1835063, 0, 65537, 1835064, 0, 65537, 1835065, 0, 65537, 1835066, 0, 131073, 1835067, 0, 131073, 1835068, 0, 131073, 1835069, 0, 65537, 1835070, 0, 65537, 1835071, 0, 65537, 1835072, 0, 131074, 1900589, 0, 131072, 1900590, 0, 131073, 1900591, 0, 131073, 1900592, 0, 131073, 1900593, 0, 131073, 1900594, 0, 131073, 1900595, 0, 131073, 1900596, 0, 131073, 1900597, 0, 131073, 1900598, 0, 131073, 1900599, 0, 131073, 1900600, 0, 131073, 1900601, 0, 131074, 1900605, 0, 131072, 1900606, 0, 131073, 1900607, 0, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="CurePotion" parent="." instance=ExtResource( 3 )]
position = Vector2( 830.325, 88.2521 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 93.1745, 65.2477 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="GUI" parent="." instance=ExtResource( 9 )]

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
items = [ "Resume", null, 0, false, false, 0, 0, null, "", false, "Main Menu", null, 0, false, false, 1, 0, null, "", false ]

[node name="MainTimer" type="Timer" parent="."]

[node name="ReadTimer" type="Timer" parent="."]

[node name="TimeLbl" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RespawnTrigger" type="Area2D" parent="."]
position = Vector2( 540.23, 520.431 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnTrigger"]
position = Vector2( 46.7357, 68.0768 )
shape = SubResource( 2 )

[node name="VerticalCameraTrigger" type="Area2D" parent="."]
position = Vector2( 586.966, 209.459 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalCameraTrigger"]
position = Vector2( 0, 57.3981 )
shape = SubResource( 3 )

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 586.966, -296.665 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="CurePotion" to="." method="_on_CurePotion_body_entered"]
[connection signal="id_pressed" from="PauseMenu" to="." method="_on_PauseMenu_id_pressed"]
[connection signal="timeout" from="MainTimer" to="." method="_on_MainTimer_timeout"]
[connection signal="timeout" from="ReadTimer" to="." method="_on_ReadTimer_timeout"]
[connection signal="body_entered" from="RespawnTrigger" to="." method="_on_RespawnTrigger_body_entered"]
[connection signal="body_entered" from="VerticalCameraTrigger" to="." method="_on_VerticalCameraTrigger_body_entered"]
[connection signal="body_exited" from="VerticalCameraTrigger" to="." method="_on_VerticalCameraTrigger_body_exited"]
